crates/python_parser/tests/snapshots/invalid_syntax@expressions__subscript__unclosed_slice_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/subscript/unclosed_slice_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..25,
        body: [
            Expr(
                ExprStmt {
                    range: 0..9,
                    value: Subscript(
                        SubscriptExpr {
                            range: 0..9,
                            value: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                SliceExpr {
                                    range: 2..9,
                                    lower: None,
                                    upper: None,
                                    step: Some(
                                        Name(
                                            NameExpr {
                                                range: 6..9,
                                                id: Name("def"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 10..25,
                    target: Call(
                        CallExpr {
                            range: 10..15,
                            func: Name(
                                NameExpr {
                                    range: 10..13,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 13..15,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 21..25,
                            id: Name("pass"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x[::
2 | 
3 | def foo():
  | ^^^ Syntax Error: Expected an identifier, but found a keyword 'def' that cannot be used here
4 |     pass
  |


  |
1 | x[::
2 | 
3 | def foo():
  |     ^^^ Syntax Error: Expected ']', found name
4 |     pass
  |


  |
3 | def foo():
4 |     pass
  |     ^^^^ Syntax Error: Expected an identifier, but found a keyword 'pass' that cannot be used here
  |


  |
3 | def foo():
4 |     pass
  |          Syntax Error: unexpected EOF while parsing
  |
